sas-core/main/default/objects/VoiceCall/fields/Caller_IVR_Language__c.field-meta.xml
<CustomField>
    <fullName>Caller_IVR_Language__c</fullName>
    <label>Caller IVR Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>da</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>sv</fullName>
                <label>Swedish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>