sas-core/main/default/objects/VoiceCall/fields/Caller_IVR_Selection__c.field-meta.xml
<CustomField>
    <fullName>Caller_IVR_Selection__c</fullName>
    <label>Caller IVR Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Agent Helpdesk</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Direct Sales</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Eurobonus</label>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>