sas-core/main/default/objects/VoiceCall/fields/EB_Level__c.field-meta.xml
<CustomField>
    <fullName>EB_Level__c</fullName>
    <formula>TEXT(Account__r.FCS_EBLevel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EB Level</label>
    <type>Text</type>
</CustomField>