sas-core/main/default/objects/VoiceCall/fields/IATA_Level__c.field-meta.xml
<CustomField>
    <fullName>IATA_Level__c</fullName>
    <formula>TEXT(Account__r.IATA_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IATA Level</label>
    <type>Text</type>
</CustomField>