sas-core/main/default/objects/VoiceCall/fields/Recipient_Country__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Country__c</fullName>
    <label>Recipient Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Norway</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Sweden</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>