sas-core/main/default/objects/VoiceCall/listViews/Voice_DS_ENG_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Voice_DS_ENG_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Voice _DS_ENG</label>
    <queue>Voice_DS_ENG</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>