sas-core/main/default/objects/VoiceCall/listViews/Voice_EB_ENG_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Voice_EB_ENG_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Voice _EB_ENG</label>
    <queue>Voice_EB_ENG</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>